--- a/scss/style.scss
+++ b/scss/style.scss
@@ -101,7 +101,9 @@ p {
         text-align: center;
         color: #292727;
     }
-    
+    &-video {
+        display: none;
+    }
 }
 .text {
     display: block;
@@ -121,9 +123,7 @@ p {
     display: block;
     width: 280px;
     height: 70px;
-    background: #FFE7B7;
     border-radius: 45px;
-    text-align: center;
     padding: 21px 0;
     font-family: 'ProximaNova';
     font-style: normal;
@@ -131,21 +131,140 @@ p {
     font-size: 20px;
     line-height: 24px;
     text-align: center;
-    color: #292727;
+    &-timer {
+        background: #FFFFFF;
+        border: 1px solid #FF6464;
+        color: #FF6464;
+        margin-left: auto;
+        &:hover {
+            background: #FF6464;
+            color: #ffffff;
+            transition: .2s linear;
+        }
+        &:active {
+            background: #F05050;
+            color: #FFFFFF;
+        }
+    }
+    &-card {
+        position: relative;
+        background: #FFE7B7;
+        color: #292727;
+        &:hover {
+            transform: scale(1.03);
+            transition: .2s linear;
+        }
+    }
+}
+.arrow {
+    display: block;
+    margin-left: 40px;
+    width: 80px;
+    height: auto;
+    svg {
+        display: block;
+        width: 100%;
+        height: 100%;
+        fill: #292727;
+    }
+    &:hover {
+        transform: scale(1.03);
+        transition: .2s linear;
+    }
+}
+.-yellow {
+    svg {
+        fill: #FFE7B7;
+    }
 }
 
 .intro {
+    position: relative;
     background-color: #204D48;
     background-image: url('../img/bg-intro.png');
     background-repeat: no-repeat;
     background-position-x: 251px;
     background-position-y: center;
+    &__img {
+        &-mobile {
+            display: none;
+        }
+    }
+    &-timer {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        position: absolute;
+        bottom: -75px;
+        background-color: #ffffff;
+        width: 1180px;
+        height: 150px;
+        padding: 27px 100px;
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+        border-radius: 45px;
+        &__title {
+            display: block;
+            width: 180px;
+            font-family: 'ProximaNova';
+            font-style: normal;
+            font-weight: bold;
+            font-size: 26px;
+            line-height: 32px;
+            color: #292727;
+            &--mobile {
+                display: none;
+            }
+        }
+    }
+    .timer {
+        &__inner {
+            padding: 0 120px 0 20px;
+            display: flex;
+            flex-direction: row;
+            &--item {
+                display: flex;
+                align-items: center;
+                &:not(:last-child) {
+                    &::after {
+                    content: '';
+                    display: block;
+                    margin: 0 7px;
+                    width: 1px;
+                    height: 65px;
+                    background-color: #292727;
+                    }
+                }
+                &__col {
+                    display: flex;
+                    flex-direction: column;
+                }
+                &__num {
+                    font-family: 'ProximaNova';
+                    font-style: normal;
+                    font-weight: bold;
+                    font-size: 60px;
+                    line-height: 73px;
+                    text-align: center;
+                    color: #FF6464;
+                }
+                &__text {
+                    font-family: 'ProximaNova';
+                    font-style: normal;
+                    font-weight: normal;
+                    font-size: 14px;
+                    line-height: 32px;
+                    text-align: center;
+                    color: #292727;
+                }
+            }
+        }
+    }
     &__inner {
         padding: 110px 0 180px 100px;
     }
 }
 .video {
-    padding: 90px 0;
+    padding: 160px 0 90px 0;
     &__inner {
        &--item {
            display: block;
@@ -171,7 +290,6 @@ p {
         grid-template-columns: 33.33% 33.33% 33.33%;
         gap: 0px 0px;
         &--item {
-            // padding: 45px 0 50px 85px;
             &:nth-child(1) {
                 background-color: #ffffff;
             }
@@ -210,6 +328,8 @@ p {
             padding: 33px 280px 55px 85px;
         }
         &--footer {
+            display: flex;
+            align-items: center;
             padding: 58px 0 50px 85px;
             border-top: 1px #FFE7B7 solid;
         }
@@ -225,6 +345,10 @@ p {
         color: #FFFFFF;
         &:last-child {
             margin-bottom: 0;
+        }
+        &:hover {
+            text-decoration: underline #FFE7B7;
+            transition: .2s linear;
         }
     }
     .-dark {
@@ -247,6 +371,7 @@ p {
         }
         &--old {
             display: block;
+            position: relative;
             margin-bottom: 20px;
             font-family: 'Gilroy';
             font-style: normal;
@@ -255,9 +380,34 @@ p {
             line-height: 25px;
             text-align: center;
             color: #ffffff;
+            &::after {
+                content: '';
+                display: block;
+                position: absolute;
+                top: 50%;
+                left: 50%;
+                transform: translateX(-50%);
+                width: 150px;
+                height: 2px;
+                background-color: #FF6464;
+            }
+            &:not(.-dark) {
+                &::after {
+                    content: '';
+                    display: block;
+                    position: absolute;
+                    top: 50%;
+                    left: 50%;
+                    transform: translateX(-50%);
+                    width: 150px;
+                    height: 2px;
+                    background-color: #FFE7B7;
+                }
+            }
+            
         }
         &--new {
-            font-family: Gilroy;
+            font-family: 'Gilroy';
             font-style: normal;
             font-weight: 900;
             font-size: 30px;
@@ -293,13 +443,12 @@ p {
             padding: 50px 80px 48px 100px;
         }
         &--name {
-            padding-bottom: 18px;
+            display: block;
+            margin-bottom: 18px;
             font-style: normal;
             font-weight: bold;
             font-size: 26px;
             line-height: 32px;
-            text-align: center;
-
             color: #FFFFFF;
         }
     }
@@ -367,6 +516,385 @@ p {
     }
 }
 
+@media(max-width: 1366px) {
+    .container {
+        padding: 0 1%;
+    }
+    .intro {
+        background-position: center;
+    }
+}
+@media(max-width: 1112px) {
+    .intro {
+        background-size: 98%;
+        &__inner {
+            padding: 90px 0 180px 100px;
+        }
+        &-timer {
+            width: 1000px;
+            left: 50%;
+            transform: translateX(-50%);
+            padding: 27px 50px;
+        }
+    }
+    .title {
+        &-intro {
+            font-size: 57px;
+            line-height: 70px;
+        }
+    }
+}
+@media(max-width: 1024px) {
+    .title {
+        &-intro {
+            font-size: 53px;
+            line-height: 66px;
+        }
+    }
+    .intro {
+        &-timer {
+            width: 95%;
+        }
+        .timer {
+            &__inner {
+                &--item {
+                    &:not(:last-child) {
+                        &::after {
+                            margin: 0 10px;
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+@media(max-width: 991px) {
+    .video {
+        &__inner {
+            &--item {
+                width: 900px;
+                height: 510px;
+            }
+        }
+    }
+}
+@media(max-width: 834px) {
+    .header {
+        background-color: #204D48;
+        &__call {
+            display: none;
+        }
+        &__logo {
+            margin-left: 20px;
+        }
+    }
+    .intro {
+        background-size: 94%;
+        &__inner {
+            padding: 5px  0 180px 20px;
+        }
+        &-timer {
+            height: auto;
+            padding: 20px 30px;
+            &__title {
+                font-size: 25px;
+                line-height: 28px;
+            }
+        }
+        .timer {
+            &__inner {
+                padding: 0;
+                &--item {
+                    &__num {
+                        font-size: 48px;
+                        line-height: 70px;
+                    }
+                }
+            }
+        }
+    }
+    .title {
+        &-intro {
+            font-size: 50px;
+            line-height: 63px;
+        }
+    }
+    .button {
+        width: 250px;
+        height: 60px;
+        padding: 16px 0;
+    }
+
+    .video {
+        &__inner {
+            &--item {
+                width: 750px;
+                height: 400px;
+            }
+        }
+    }
+    .title {
+        &-video {
+            display: block;
+        }
+    }
+}
+@media(max-width: 768px) {
+    .title {
+        &-video {
+            text-align: center;
+            margin-bottom: 30px;
+            font-size: 64px;
+            line-height: 80px;
+            text-align: center;
+            color: #292727;
+        }
+    }
+    .header {
+        &__inner {
+            padding: 16px 0 0 0;
+        }
+    }
+    .intro {
+        background-image: none;
+        background-size: 60%;
+        background-position: right;
+        &__img {
+            &-mobile {
+                display: block;
+                position: absolute;
+                height: 511px;
+                width: auto;
+                top: 0;
+                right: 1%;
+                z-index: 5;
+            }
+        }
+        &__inner {
+            padding: 65px 0 260px 20px;
+        }
+        &-timer {
+            bottom: 100px;
+            &__title {
+                display: none;
+                &--mobile {
+                    display: block;
+                    width: 300px;
+                    margin-top: 60px;
+                    font-family: 'ProximaNova';
+                    font-style: normal;
+                    font-weight: bold;
+                    font-size: 21px;
+                    line-height: 24px;
+                    color: #FFFFFF;
+                }
+            }
+        }
+        .timer {
+            &__inner {
+                &--item {
+                    &__num {
+                        font-size: 43px;
+                        line-height: 48px;
+                    }
+                }
+            }
+        }
+    }
+    .video {
+        padding: 50px 0 90px 0;
+    }
+}
+@media (max-width: 667px) {
+    .intro {
+        &__img {
+            &-mobile {
+                height: 500px;
+            }
+        }
+    }
+    .video {
+        &__inner {
+            &--item {
+                width: 599px;
+                height: 350px;
+            }
+        }
+    }
+    .title {
+        &-video {
+            font-size: 50px;
+            line-height: 53px;
+        }
+    }
+}
+@media (max-width: 568px) {
+    .button {
+        &-timer {
+            background-color: transparent;
+            position: absolute;
+            bottom: -85px;
+            left: 50%;
+            transform: translateX(-50%);
+        }
+    }
+    .intro {
+        &__img {
+            &-mobile {
+                height: 505px;
+            }
+        }
+        &-timer {
+            width: 90%;
+            border-radius: 60px;
+            &__title {
+                &--mobile {
+                    margin-top: 30px;
+                }
+            }
+        }
+        .timer {
+            &__inner {
+                margin: 0 auto;
+                &--item {
+                    &:not(:last-child) {
+                        &::after {
+                            margin: 0 20px;
+                        }
+                    }
+                }
+            }
+        }
+    }
+    .video {
+        &__inner {
+            &--item {
+                width: 490px;
+                height: 300px;
+            }
+        }
+    }
+    .title {
+        &-video {
+            font-size: 42px;
+        }
+    }
+}
+@media (max-width: 414px) {
+    .header {
+        &__logo {
+            width: 129px;
+            height: 27px;
+        }
+    }
+    .title {
+        &-intro {
+            width: 300px;
+            font-size: 32px;
+            line-height: 40px;
+        }
+    }
+    .subtitle {
+        width: 250px;
+        font-size: 16px;
+        line-height: 24px;
+    }
+    .intro {
+        &-timer {
+            bottom: 164px;
+            padding: 9px 0;
+            &__title {
+                &--mobile {
+                    width: 200px;
+                    margin-top: 20px;
+                    font-size: 18px;
+                    line-height: 21px;
+                }
+            }
+        }
+        &__inner {
+            padding: 20px 0 260px 20px;
+        }
+        .timer {
+            &__inner {
+                &--item {
+                    &:not(:last-child) {
+                        &::after {
+                            height: 45px;
+                            background-color: rgba(41, 39, 39, 0.1);
+                        }
+                    }
+                    &__num {
+                        font-size: 24px;
+                        line-height: 27px;
+                    }
+                }
+            }
+        }
+        &__img {
+            &-mobile {
+                height: 340px;
+            }
+        }
+        .button {
+            padding: 11px 0;
+            width: 230px;
+            height: 50px;
+            font-size: 18px;
+        }
+    }
+    .video {
+        padding: 50px 0 80px 0;
+        &__inner {
+            &--item {
+                width: 390px;
+                height: 230px;
+            }
+        }
+    }
+    .title {
+        font-size: 32px;
+        line-height: 35px;
+    }
+}
+@media (max-width: 375px) {
+    .video {
+        &__inner {
+            &--item {
+                width: 315px;
+                height: 180px;
+            }
+        }
+    }
+}
+@media (max-width: 320px) {
+    .intro {
+        &-timer {
+            &__title {
+                &--mobile {
+                    font-size: 16px;
+                    line-height: 19px;
+                }
+            }
+        }
+        .timer {
+            &__inner {
+                &--item {
+                    &:not(:last-child) {
+                        &::after {
+                            margin: 0 10px;
+                        }
+                    }
+                }
+            }
+        }
+        &__img {
+            &-mobile {
+                height: 321px;
+            }
+        }
+    }
+}
 /*FONTS*/
 @font-face {
     font-family: 'ProximaNova'; 
