--- a/css/style.css
+++ b/css/style.css
@@ -105,6 +105,9 @@ p {
   text-align: center;
   color: #292727;
 }
+.title-video {
+  display: none;
+}
 
 .text {
   display: block;
@@ -126,9 +129,7 @@ p {
   display: block;
   width: 280px;
   height: 70px;
-  background: #FFE7B7;
   border-radius: 45px;
-  text-align: center;
   padding: 21px 0;
   font-family: "ProximaNova";
   font-style: normal;
@@ -136,22 +137,135 @@ p {
   font-size: 20px;
   line-height: 24px;
   text-align: center;
+}
+.button-timer {
+  background: #FFFFFF;
+  border: 1px solid #FF6464;
+  color: #FF6464;
+  margin-left: auto;
+}
+.button-timer:hover {
+  background: #FF6464;
+  color: #ffffff;
+  transition: 0.2s linear;
+}
+.button-timer:active {
+  background: #F05050;
+  color: #FFFFFF;
+}
+.button-card {
+  position: relative;
+  background: #FFE7B7;
   color: #292727;
+}
+.button-card:hover {
+  transform: scale(1.03);
+  transition: 0.2s linear;
+}
+
+.arrow {
+  display: block;
+  margin-left: 40px;
+  width: 80px;
+  height: auto;
+}
+.arrow svg {
+  display: block;
+  width: 100%;
+  height: 100%;
+  fill: #292727;
+}
+.arrow:hover {
+  transform: scale(1.03);
+  transition: 0.2s linear;
+}
+
+.-yellow svg {
+  fill: #FFE7B7;
 }
 
 .intro {
+  position: relative;
   background-color: #204D48;
   background-image: url("../img/bg-intro.png");
   background-repeat: no-repeat;
   background-position-x: 251px;
   background-position-y: center;
 }
+.intro__img-mobile {
+  display: none;
+}
+.intro-timer {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  position: absolute;
+  bottom: -75px;
+  background-color: #ffffff;
+  width: 1180px;
+  height: 150px;
+  padding: 27px 100px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 45px;
+}
+.intro-timer__title {
+  display: block;
+  width: 180px;
+  font-family: "ProximaNova";
+  font-style: normal;
+  font-weight: bold;
+  font-size: 26px;
+  line-height: 32px;
+  color: #292727;
+}
+.intro-timer__title--mobile {
+  display: none;
+}
+.intro .timer__inner {
+  padding: 0 120px 0 20px;
+  display: flex;
+  flex-direction: row;
+}
+.intro .timer__inner--item {
+  display: flex;
+  align-items: center;
+}
+.intro .timer__inner--item:not(:last-child)::after {
+  content: "";
+  display: block;
+  margin: 0 7px;
+  width: 1px;
+  height: 65px;
+  background-color: #292727;
+}
+.intro .timer__inner--item__col {
+  display: flex;
+  flex-direction: column;
+}
+.intro .timer__inner--item__num {
+  font-family: "ProximaNova";
+  font-style: normal;
+  font-weight: bold;
+  font-size: 60px;
+  line-height: 73px;
+  text-align: center;
+  color: #FF6464;
+}
+.intro .timer__inner--item__text {
+  font-family: "ProximaNova";
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 32px;
+  text-align: center;
+  color: #292727;
+}
 .intro__inner {
   padding: 110px 0 180px 100px;
 }
 
 .video {
-  padding: 90px 0;
+  padding: 160px 0 90px 0;
 }
 .video__inner--item {
   display: block;
@@ -212,6 +326,8 @@ p {
   padding: 33px 280px 55px 85px;
 }
 .package__item--footer {
+  display: flex;
+  align-items: center;
   padding: 58px 0 50px 85px;
   border-top: 1px #FFE7B7 solid;
 }
@@ -227,6 +343,11 @@ p {
 }
 .package__link:last-child {
   margin-bottom: 0;
+}
+.package__link:hover {
+  -webkit-text-decoration: underline #FFE7B7;
+          text-decoration: underline #FFE7B7;
+  transition: 0.2s linear;
 }
 .package .-dark {
   color: #292727;
@@ -249,6 +370,7 @@ p {
 }
 .package__cost--old {
   display: block;
+  position: relative;
   margin-bottom: 20px;
   font-family: "Gilroy";
   font-style: normal;
@@ -258,8 +380,30 @@ p {
   text-align: center;
   color: #ffffff;
 }
+.package__cost--old::after {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 150px;
+  height: 2px;
+  background-color: #FF6464;
+}
+.package__cost--old:not(.-dark)::after {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 150px;
+  height: 2px;
+  background-color: #FFE7B7;
+}
 .package__cost--new {
-  font-family: Gilroy;
+  font-family: "Gilroy";
   font-style: normal;
   font-weight: 900;
   font-size: 30px;
@@ -296,12 +440,12 @@ p {
   padding: 50px 80px 48px 100px;
 }
 .autor__inner--name {
-  padding-bottom: 18px;
+  display: block;
+  margin-bottom: 18px;
   font-style: normal;
   font-weight: bold;
   font-size: 26px;
   line-height: 32px;
-  text-align: center;
   color: #FFFFFF;
 }
 .autor__text {
@@ -368,6 +512,293 @@ p {
   height: 100%;
 }
 
+@media (max-width: 1366px) {
+  .container {
+    padding: 0 1%;
+  }
+
+  .intro {
+    background-position: center;
+  }
+}
+@media (max-width: 1112px) {
+  .intro {
+    background-size: 98%;
+  }
+  .intro__inner {
+    padding: 90px 0 180px 100px;
+  }
+  .intro-timer {
+    width: 1000px;
+    left: 50%;
+    transform: translateX(-50%);
+    padding: 27px 50px;
+  }
+
+  .title-intro {
+    font-size: 57px;
+    line-height: 70px;
+  }
+}
+@media (max-width: 1024px) {
+  .title-intro {
+    font-size: 53px;
+    line-height: 66px;
+  }
+
+  .intro-timer {
+    width: 95%;
+  }
+  .intro .timer__inner--item:not(:last-child)::after {
+    margin: 0 10px;
+  }
+}
+@media (max-width: 991px) {
+  .video__inner--item {
+    width: 900px;
+    height: 510px;
+  }
+}
+@media (max-width: 834px) {
+  .header {
+    background-color: #204D48;
+  }
+  .header__call {
+    display: none;
+  }
+  .header__logo {
+    margin-left: 20px;
+  }
+
+  .intro {
+    background-size: 94%;
+  }
+  .intro__inner {
+    padding: 5px 0 180px 20px;
+  }
+  .intro-timer {
+    height: auto;
+    padding: 20px 30px;
+  }
+  .intro-timer__title {
+    font-size: 25px;
+    line-height: 28px;
+  }
+  .intro .timer__inner {
+    padding: 0;
+  }
+  .intro .timer__inner--item__num {
+    font-size: 48px;
+    line-height: 70px;
+  }
+
+  .title-intro {
+    font-size: 50px;
+    line-height: 63px;
+  }
+
+  .button {
+    width: 250px;
+    height: 60px;
+    padding: 16px 0;
+  }
+
+  .video__inner--item {
+    width: 750px;
+    height: 400px;
+  }
+
+  .title-video {
+    display: block;
+  }
+}
+@media (max-width: 768px) {
+  .title-video {
+    text-align: center;
+    margin-bottom: 30px;
+    font-size: 64px;
+    line-height: 80px;
+    text-align: center;
+    color: #292727;
+  }
+
+  .header__inner {
+    padding: 16px 0 0 0;
+  }
+
+  .intro {
+    background-image: none;
+    background-size: 60%;
+    background-position: right;
+  }
+  .intro__img-mobile {
+    display: block;
+    position: absolute;
+    height: 511px;
+    width: auto;
+    top: 0;
+    right: 1%;
+    z-index: 5;
+  }
+  .intro__inner {
+    padding: 65px 0 260px 20px;
+  }
+  .intro-timer {
+    bottom: 100px;
+  }
+  .intro-timer__title {
+    display: none;
+  }
+  .intro-timer__title--mobile {
+    display: block;
+    width: 300px;
+    margin-top: 60px;
+    font-family: "ProximaNova";
+    font-style: normal;
+    font-weight: bold;
+    font-size: 21px;
+    line-height: 24px;
+    color: #FFFFFF;
+  }
+  .intro .timer__inner--item__num {
+    font-size: 43px;
+    line-height: 48px;
+  }
+
+  .video {
+    padding: 50px 0 90px 0;
+  }
+}
+@media (max-width: 667px) {
+  .intro__img-mobile {
+    height: 500px;
+  }
+
+  .video__inner--item {
+    width: 599px;
+    height: 350px;
+  }
+
+  .title-video {
+    font-size: 50px;
+    line-height: 53px;
+  }
+}
+@media (max-width: 568px) {
+  .button-timer {
+    background-color: transparent;
+    position: absolute;
+    bottom: -85px;
+    left: 50%;
+    transform: translateX(-50%);
+  }
+
+  .intro__img-mobile {
+    height: 505px;
+  }
+  .intro-timer {
+    width: 90%;
+    border-radius: 60px;
+  }
+  .intro-timer__title--mobile {
+    margin-top: 30px;
+  }
+  .intro .timer__inner {
+    margin: 0 auto;
+  }
+  .intro .timer__inner--item:not(:last-child)::after {
+    margin: 0 20px;
+  }
+
+  .video__inner--item {
+    width: 490px;
+    height: 300px;
+  }
+
+  .title-video {
+    font-size: 42px;
+  }
+}
+@media (max-width: 414px) {
+  .header__logo {
+    width: 129px;
+    height: 27px;
+  }
+
+  .title-intro {
+    width: 300px;
+    font-size: 32px;
+    line-height: 40px;
+  }
+
+  .subtitle {
+    width: 250px;
+    font-size: 16px;
+    line-height: 24px;
+  }
+
+  .intro-timer {
+    bottom: 164px;
+    padding: 9px 0;
+  }
+  .intro-timer__title--mobile {
+    width: 200px;
+    margin-top: 20px;
+    font-size: 18px;
+    line-height: 21px;
+  }
+  .intro__inner {
+    padding: 20px 0 260px 20px;
+  }
+  .intro .timer__inner--item:not(:last-child)::after {
+    height: 45px;
+    background-color: rgba(41, 39, 39, 0.1);
+  }
+  .intro .timer__inner--item__num {
+    font-size: 24px;
+    line-height: 27px;
+  }
+  .intro__img-mobile {
+    height: 340px;
+  }
+  .intro .button {
+    padding: 11px 0;
+    width: 230px;
+    height: 50px;
+    font-size: 18px;
+  }
+
+  .video {
+    padding: 50px 0 80px 0;
+  }
+  .video__inner--item {
+    width: 390px;
+    height: 230px;
+  }
+
+  .title {
+    font-size: 32px;
+    line-height: 35px;
+  }
+}
+@media (max-width: 375px) {
+  .video__inner--item {
+    width: 315px;
+    height: 180px;
+  }
+}
+@media (max-width: 320px) {
+  .intro-timer__title--mobile {
+    font-size: 16px;
+    line-height: 19px;
+  }
+  .intro .timer__inner--item:not(:last-child)::after {
+    margin: 0 10px;
+  }
+  .intro__img-mobile {
+    height: 321px;
+  }
+}
 /*FONTS*/
 @font-face {
   font-family: "ProximaNova";
