--- a/css/style.css
+++ b/css/style.css
@@ -421,8 +421,11 @@ p {
 .autor__inner {
   padding: 50px 0 0 0;
   display: flex;
+  flex-direction: column;
+}
+.autor__inner--line {
+  display: flex;
   justify-content: space-between;
-  flex-wrap: wrap;
 }
 .autor__inner--item {
   display: block;
@@ -437,7 +440,7 @@ p {
   height: 100%;
 }
 .autor__inner--text {
-  padding: 50px 80px 48px 100px;
+  padding: 29px 80px 29px 80px;
 }
 .autor__inner--name {
   display: block;
@@ -520,6 +523,27 @@ p {
   .intro {
     background-position: center;
   }
+
+  .package-img {
+    height: 140px;
+    top: 100px;
+  }
+  .package__item--header {
+    padding: 45px 0 33px 50px;
+  }
+  .package__item--text {
+    padding: 33px 136px 55px 50px;
+  }
+  .package__item--footer {
+    padding: 58px 0 50px 50px;
+  }
+  .package__cost {
+    padding: 0 0 40px 50px;
+  }
+
+  .arrow {
+    margin-left: 20px;
+  }
 }
 @media (max-width: 1112px) {
   .intro {
@@ -539,6 +563,44 @@ p {
     font-size: 57px;
     line-height: 70px;
   }
+  .title-dark {
+    font-size: 54px;
+    line-height: 57px;
+  }
+
+  .package__item--header {
+    padding: 30px 0 30px 15px;
+  }
+  .package__item--header__title {
+    font-size: 24px;
+  }
+  .package__item--text {
+    padding: 30px 100px 55px 15px;
+  }
+  .package__item--footer {
+    padding: 10px 0 20px 15px;
+  }
+  .package__link {
+    font-size: 18px;
+    line-height: 21px;
+  }
+  .package__cost {
+    padding: 0 0 40px 15px;
+  }
+  .package-img {
+    height: 100px;
+  }
+
+  .button-card {
+    padding: 17px 0;
+    width: 230px;
+    height: 60px;
+  }
+
+  .autor__text {
+    font-size: 18px;
+    line-height: 21px;
+  }
 }
 @media (max-width: 1024px) {
   .title-intro {
@@ -552,11 +614,88 @@ p {
   .intro .timer__inner--item:not(:last-child)::after {
     margin: 0 10px;
   }
+
+  .package__item--text {
+    padding: 30px 84px 55px 15px;
+  }
+
+  .button-card {
+    padding: 13px 0;
+    height: 50px;
+  }
+
+  .arrow {
+    margin-left: 7px;
+  }
+
+  .autor__inner--text {
+    padding: 29px 40px;
+  }
 }
 @media (max-width: 991px) {
   .video__inner--item {
     width: 900px;
     height: 510px;
+  }
+
+  .title-dark {
+    font-size: 48px;
+    line-height: 51px;
+  }
+
+  .package-img {
+    display: none;
+  }
+  .package__inner {
+    display: flex;
+    flex-direction: column;
+  }
+  .package__inner--item {
+    margin: 0 auto 30px auto;
+    width: 80%;
+  }
+  .package__item--header {
+    padding: 25px 0 30px 25px;
+    border-bottom: none;
+  }
+  .package__item--text {
+    padding: 25px 0 0 25px;
+  }
+  .package__item--footer {
+    border-top: none;
+    padding: 25px 0 45px 25px;
+  }
+  .package__cost {
+    padding: 30px 0 20px 25px;
+  }
+
+  .button-card {
+    width: 280px;
+    height: 70px;
+    padding: 21px 0;
+  }
+  .button-card:hover {
+    transform: none;
+  }
+
+  .arrow {
+    display: none;
+  }
+
+  .autor {
+    padding: 0;
+  }
+  .autor__inner--line {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .autor__inner--line:last-child {
+    display: flex;
+    flex-direction: column-reverse;
+  }
+  .autor__inner--item {
+    width: 60%;
   }
 }
 @media (max-width: 834px) {
@@ -621,6 +760,13 @@ p {
     text-align: center;
     color: #292727;
   }
+  .title-dark {
+    width: auto;
+  }
+  .title-card {
+    font-size: 45px;
+    line-height: 48px;
+  }
 
   .header__inner {
     padding: 16px 0 0 0;
@@ -668,6 +814,11 @@ p {
   .video {
     padding: 50px 0 90px 0;
   }
+
+  .footer__link--item {
+    width: 50px;
+    height: 50px;
+  }
 }
 @media (max-width: 667px) {
   .intro__img-mobile {
@@ -682,6 +833,14 @@ p {
   .title-video {
     font-size: 50px;
     line-height: 53px;
+  }
+
+  .autor__inner--item {
+    width: 80%;
+  }
+
+  .footer__link {
+    width: 70%;
   }
 }
 @media (max-width: 568px) {
@@ -717,6 +876,10 @@ p {
 
   .title-video {
     font-size: 42px;
+  }
+
+  .package__inner--item {
+    width: 90%;
   }
 }
 @media (max-width: 414px) {
@@ -780,14 +943,49 @@ p {
     font-size: 32px;
     line-height: 35px;
   }
-}
-@media (max-width: 375px) {
-  .video__inner--item {
-    width: 315px;
-    height: 180px;
+
+  .package__inner--item {
+    width: 100%;
+  }
+  .package__item--header__subtitle {
+    font-size: 12px;
+    line-height: 15px;
+  }
+  .package__item--text {
+    padding: 1px 0 0 25px;
+  }
+  .package__link {
+    font-size: 16px;
+    line-height: 19px;
+  }
+
+  .autor__inner--item {
+    width: 93%;
+  }
+  .autor__inner--text {
+    padding: 20px 15px;
+  }
+
+  .footer {
+    padding: 40px 0 35px 0;
+  }
+  .footer__link {
+    margin: 25px auto 0 auto;
+  }
+  .footer__link--item {
+    width: 30px;
+    height: 30px;
+  }
+  .footer__inner--text {
+    font-size: 17px;
+    line-height: 20px;
+  }
+  .footer__inner--email {
+    font-size: 18px;
+    line-height: 21px;
   }
 }
-@media (max-width: 320px) {
+@media (max-width: 375px) {
   .intro-timer__title--mobile {
     font-size: 16px;
     line-height: 19px;
@@ -797,6 +995,26 @@ p {
   }
   .intro__img-mobile {
     height: 321px;
+  }
+
+  .video__inner--item {
+    width: 315px;
+    height: 180px;
+  }
+
+  .autor__inner--name {
+    font-size: 19px;
+    margin-bottom: 16px;
+  }
+  .autor__text {
+    margin-bottom: 15px;
+    font-size: 16px;
+    line-height: 19px;
+  }
+}
+@media (max-width: 320px) {
+  .intro {
+    overflow: hidden;
   }
 }
 /*FONTS*/
