--- a/scss/style.scss
+++ b/scss/style.scss
@@ -863,7 +863,8 @@ p {
         }
     }
     .video {
-        padding: 50px 0 90px 0;
+        // padding: 50px 0 90px 0;
+        display: none;
     }
     .footer {
         &__link {
